pkl-core/src/test/files/LanguageSnippetTests/input/errors/analyzeImportsCannotFindModule.pkl
import "pkl:analyze"
import "pkl:reflect"
import ".../input-helper/analyze/cannotFindModule.pkl"

res = analyze.importGraph(Set(reflect.Module(cannotFindModule).uri))
